git commit -m 'initial commit'

--- a/Public/index.css
+++ b/Public/index.css
@@ -1,5 +1,6 @@
 body {
     background-color: #f0f0f0;
+    background-image: url('Public/images/forest-sunbeams-trees-sunlight-70365.jpeg');
     font-family: 'Roboto', sans-serif;
 }
 
