--- a/Public/index.css
+++ b/Public/index.css
@@ -1,6 +1,6 @@
 body {
     background-image: url('Public/images/forest-sunbeams-trees-sunlight-70365.jpeg');
-    font-family: 'Roboto', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .container {
