--- a/Public/index.css
+++ b/Public/index.css
@@ -66,7 +66,7 @@ table.highlight thead th {
 
 table.highlight tbody tr:hover {
     background-color: #ecf0f1;
-    font: bold;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 table.highlight th {
