--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
     background-image: url('Public/images/forest-sunbeams-trees-sunlight-70365.jpeg');
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: orangered;
 }
 
 .container {
@@ -33,7 +34,7 @@ h2 {
 
 h3 {
     color: #16a085;
-    font-size: 1.5em;
+    font-size: 30px;
     margin-bottom: 10px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
