--- a/index.css
+++ b/index.css
@@ -63,6 +63,7 @@ table.highlight td {
 table.highlight thead th {
     background-color: #2c3e50;
     color: #fff;
+    font-size: large;
 }
 
 table.highlight tbody tr:hover {
