git commit -m 'commit all changes'

--- a/Public/index.css
+++ b/Public/index.css
@@ -1,6 +1,7 @@
 body {
     background-image: url('Public/images/forest-sunbeams-trees-sunlight-70365.jpeg');
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: black;
 }
 
 .container {
