--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body {
 .container {
     margin-top: 30px;
     padding: 20px;
-    background-image: url('Public/images/autumn 2.jpg');
+    background-image: url('Public/images/Backyy.jpg');
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -62,7 +62,7 @@ table.highlight td {
 
 table.highlight thead th {
     background-color: #2c3e50;
-    color: #fff;
+    color: black;
     font-size: large;
 }
 
